added profile_img col and setting value as url from s3 bucket 12th may
